--- a/README.mkd
+++ b/README.mkd
@@ -4,15 +4,15 @@
 ./mount_with_home.py:
 
 Usage:
-  ./mount_with_home.py CHROOT_PATH [options] [--share_home | --use_home=HOME_DIRECTORY_PATH] [ADDITIONAL_VOLUMES...]
-  ./mount_with_home.py (-h | --help)
+  ./mount_with_home.py CHROOT_PATH [--root | --no_ro | --share_home | --use_home=HOME_DIRECTORY_PATH] [ADDITIONAL_VOLUMES...]
+  ./mount_with_home.py --help
   ./mount_with_home.py --version
 
 Options:
-  -h --help     Show this screen.
+  --help        Show this screen.
   --version     Show version.
-  --no_ro       Don't bind-mount readonly files necessary for consistent environment usage, like /etc/password or /etc/hosts.
   --root        Don't drop privs to executing user, maintain root permissions in chroot.
+  --no_ro       Don't bind-mount readonly files necessary for consistent environment usage, like /etc/password or /etc/hosts. (implies --root)
   --use_home=x  Use the specified directory as the chroot user's home directory.
   --share_home  Use the executing user's home directory as the chroot user's home directory.
 ```
